// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-table.vue Demo-单行颜色 1`] = `
<div>
  <table
    class="root"
  >
    <thead>
      <tr>
        <th
          width="15%"
        >
          用户名
        </th>
         
        <th
          width="15%"
        >
          手机号码
        </th>
         
        <th>
          地址
        </th>
         
        <th
          width="18%"
        >
          最近登录时间
        </th>
         
        <th
          width="12%"
        >
          操作
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr
        color="light"
      >
        <td>
          张三
        </td>
         
        <td>
          18612917895
        </td>
         
        <td>
          浙江省杭州市滨江区网商路599号网易大厦
        </td>
         
        <td>
          2018-05-28 21:52:11
        </td>
         
        <td>
          <a
            class="root"
            hovertype="underline"
            tabindex="0"
            target="_self"
            vusion-slot-name-edit="text"
          >
            <!---->
             详情
          </a>
           
          <a
            class="root"
            hovertype="underline"
            tabindex="0"
            target="_self"
            vusion-slot-name-edit="text"
          >
            <!---->
             设置
          </a>
        </td>
      </tr>
       
      <tr
        color="normal"
      >
        <td>
          小明
        </td>
         
        <td>
          13727160283
        </td>
         
        <td>
          浙江省杭州市滨江区江虹路459号英飞特科技园
        </td>
         
        <td>
          2019-03-12 22:24:36
        </td>
         
        <td>
          <a
            class="root"
            hovertype="underline"
            tabindex="0"
            target="_self"
            vusion-slot-name-edit="text"
          >
            <!---->
             详情
          </a>
           
          <a
            class="root"
            hovertype="underline"
            tabindex="0"
            target="_self"
            vusion-slot-name-edit="text"
          >
            <!---->
             设置
          </a>
        </td>
      </tr>
       
      <tr
        color="dark"
      >
        <td>
          李四
        </td>
         
        <td>
          18897127809
        </td>
         
        <td>
          浙江省杭州市滨江区秋溢路606号西可科技园
        </td>
         
        <td>
          2019-05-18 15:45:30
        </td>
         
        <td>
          <a
            class="root"
            hovertype="underline"
            tabindex="0"
            target="_self"
            vusion-slot-name-edit="text"
          >
            <!---->
             详情
          </a>
           
          <a
            class="root"
            hovertype="underline"
            tabindex="0"
            target="_self"
            vusion-slot-name-edit="text"
          >
            <!---->
             设置
          </a>
        </td>
      </tr>
       
      <tr
        color="primary"
      >
        <td>
          李华
        </td>
         
        <td>
          18749261214
        </td>
         
        <td>
          浙江省杭州市滨江区长河路590号东忠科技园
        </td>
         
        <td>
          2018-12-10 15:48:01
        </td>
         
        <td>
          <a
            class="root"
            hovertype="underline"
            tabindex="0"
            target="_self"
            vusion-slot-name-edit="text"
          >
            <!---->
             详情
          </a>
           
          <a
            class="root"
            hovertype="underline"
            tabindex="0"
            target="_self"
            vusion-slot-name-edit="text"
          >
            <!---->
             设置
          </a>
        </td>
      </tr>
       
      <tr
        color="error"
      >
        <td>
          王五
        </td>
         
        <td>
          13579340020
        </td>
         
        <td>
          浙江省杭州市滨江区网商路599号网易大厦二期
        </td>
         
        <td>
          2018-07-16 01:32:06
        </td>
         
        <td>
          <a
            class="root"
            hovertype="underline"
            tabindex="0"
            target="_self"
            vusion-slot-name-edit="text"
          >
            <!---->
             详情
          </a>
           
          <a
            class="root"
            hovertype="underline"
            tabindex="0"
            target="_self"
            vusion-slot-name-edit="text"
          >
            <!---->
             设置
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`u-table.vue Demo-基本用法 1`] = `
<div>
  <table
    class="root"
  >
    <thead>
      <tr>
        <th
          width="20%"
        >
          序号
        </th>
         
        <th
          width="20%"
        >
          姓名
        </th>
         
        <th>
          地址
        </th>
         
        <th
          width="20%"
        >
          出生日期
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          1
        </td>
         
        <td>
          张三
        </td>
         
        <td>
          浙江省杭州市滨江区网商路599号网易大厦
        </td>
         
        <td>
          1991-05-28
        </td>
      </tr>
       
      <tr>
        <td>
          2
        </td>
         
        <td>
          小明
        </td>
         
        <td>
          浙江省杭州市滨江区江虹路459号英飞特科技园
        </td>
         
        <td>
          1992-09-14
        </td>
      </tr>
       
      <tr>
        <td>
          3
        </td>
         
        <td>
          李四
        </td>
         
        <td>
          浙江省杭州市滨江区秋溢路606号西可科技园
        </td>
         
        <td>
          1990-02-28
        </td>
      </tr>
       
      <tr>
        <td>
          4
        </td>
         
        <td>
          李华
        </td>
         
        <td>
          浙江省杭州市滨江区长河路590号东忠科技园
        </td>
         
        <td>
          1989-12-10
        </td>
      </tr>
       
      <tr>
        <td>
          5
        </td>
         
        <td>
          王五
        </td>
         
        <td>
          浙江省杭州市滨江区网商路599号网易大厦二期
        </td>
         
        <td>
          1993-07-16
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`u-table.vue Demo-条纹展示 1`] = `
<div>
  <table
    class="root"
    striped=""
  >
    <thead>
      <tr>
        <th
          width="20%"
        >
          序号
        </th>
         
        <th
          width="20%"
        >
          姓名
        </th>
         
        <th>
          地址
        </th>
         
        <th
          width="20%"
        >
          出生日期
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          1
        </td>
         
        <td>
          张三
        </td>
         
        <td>
          浙江省杭州市滨江区网商路599号网易大厦
        </td>
         
        <td>
          1991-05-28
        </td>
      </tr>
       
      <tr>
        <td>
          2
        </td>
         
        <td>
          小明
        </td>
         
        <td>
          浙江省杭州市滨江区江虹路459号英飞特科技园
        </td>
         
        <td>
          1992-09-14
        </td>
      </tr>
       
      <tr>
        <td>
          3
        </td>
         
        <td>
          李四
        </td>
         
        <td>
          浙江省杭州市滨江区秋溢路606号西可科技园
        </td>
         
        <td>
          1990-02-28
        </td>
      </tr>
       
      <tr>
        <td>
          4
        </td>
         
        <td>
          李华
        </td>
         
        <td>
          浙江省杭州市滨江区长河路590号东忠科技园
        </td>
         
        <td>
          1989-12-10
        </td>
      </tr>
       
      <tr>
        <td>
          5
        </td>
         
        <td>
          王五
        </td>
         
        <td>
          浙江省杭州市滨江区网商路599号网易大厦二期
        </td>
         
        <td>
          1993-07-16
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`u-table.vue Demo-表格线条 1`] = `
<div>
  <table
    class="root"
    line="both"
  >
    <thead>
      <tr>
        <th
          width="20%"
        >
          序号
        </th>
         
        <th
          width="20%"
        >
          姓名
        </th>
         
        <th>
          地址
        </th>
         
        <th
          width="20%"
        >
          出生日期
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          1
        </td>
         
        <td>
          张三
        </td>
         
        <td>
          浙江省杭州市滨江区网商路599号网易大厦
        </td>
         
        <td>
          1991-05-28
        </td>
      </tr>
       
      <tr>
        <td>
          2
        </td>
         
        <td>
          小明
        </td>
         
        <td>
          浙江省杭州市滨江区江虹路459号英飞特科技园
        </td>
         
        <td>
          1992-09-14
        </td>
      </tr>
       
      <tr>
        <td>
          3
        </td>
         
        <td>
          李四
        </td>
         
        <td>
          浙江省杭州市滨江区秋溢路606号西可科技园
        </td>
         
        <td>
          1990-02-28
        </td>
      </tr>
       
      <tr>
        <td>
          4
        </td>
         
        <td>
          李华
        </td>
         
        <td>
          浙江省杭州市滨江区长河路590号东忠科技园
        </td>
         
        <td>
          1989-12-10
        </td>
      </tr>
       
      <tr>
        <td>
          5
        </td>
         
        <td>
          王五
        </td>
         
        <td>
          浙江省杭州市滨江区网商路599号网易大厦二期
        </td>
         
        <td>
          1993-07-16
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`u-table.vue Demo-表格颜色 1`] = `
<div>
  <table
    class="root"
    color="light"
  >
    <thead>
      <tr>
        <th
          width="20%"
        >
          序号
        </th>
         
        <th
          width="20%"
        >
          姓名
        </th>
         
        <th>
          地址
        </th>
         
        <th
          width="20%"
        >
          出生日期
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          1
        </td>
         
        <td>
          张三
        </td>
         
        <td>
          浙江省杭州市滨江区网商路599号网易大厦
        </td>
         
        <td>
          1991-05-28
        </td>
      </tr>
       
      <tr>
        <td>
          2
        </td>
         
        <td>
          小明
        </td>
         
        <td>
          浙江省杭州市滨江区江虹路459号英飞特科技园
        </td>
         
        <td>
          1992-09-14
        </td>
      </tr>
       
      <tr>
        <td>
          3
        </td>
         
        <td>
          李四
        </td>
         
        <td>
          浙江省杭州市滨江区秋溢路606号西可科技园
        </td>
         
        <td>
          1990-02-28
        </td>
      </tr>
       
      <tr>
        <td>
          4
        </td>
         
        <td>
          李华
        </td>
         
        <td>
          浙江省杭州市滨江区长河路590号东忠科技园
        </td>
         
        <td>
          1989-12-10
        </td>
      </tr>
       
      <tr>
        <td>
          5
        </td>
         
        <td>
          王五
        </td>
         
        <td>
          浙江省杭州市滨江区网商路599号网易大厦二期
        </td>
         
        <td>
          1993-07-16
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
